<resources>
    <string name="app_name">Chef-Up</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="search_your_favourite_recipe">Search your favourite recipe</string>
    <string name="cook_like_a_pro_with_nour_expertly_crafted_recipes">Cook like a pro with \nour expertly crafted recipes</string>
    <string name="welcome_to_chef_up">Lets Chef-up!</string>
    <string name="your_favorite_meals">Your favorite meals</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="see_more">See more</string>
    <string name="categories_intro">Flavors for Every Moment\nBrowse Our Recipe Categories!</string>
    <string name="add_recipe_title">Craft and Contribute:\nYour Recipe Could be the Next Big Hit!</string>
    <string name="recipe_submit_button">Share Your Recipe</string>
</resources>